# minimal-cmake-emscripten-playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  local-build.cmd
build.emscripten/: index.html  minimal-cmake-emscripten-playground.js  minimal-cmake-emscripten-playground.wasm  module.html
src/: main.cpp
